@@ -27,106 +27,130 @@ package com.questhelper.helpers.quests.waterfallquest;
 import com.questhelper.collections.ItemCollections;
 import com.questhelper.panel.PanelDetails;
 import com.questhelper.questhelpers.BasicQuestHelper;
-import com.questhelper.requirements.Requirement;
-import com.questhelper.requirements.conditional.Conditions;
 import com.questhelper.requirements.item.ItemRequirement;
+import static com.questhelper.requirements.util.LogicHelper.and;
 import com.questhelper.requirements.var.VarbitRequirement;
 import com.questhelper.requirements.zone.Zone;
 import com.questhelper.requirements.zone.ZoneRequirement;
 import com.questhelper.rewards.ExperienceReward;
 import com.questhelper.rewards.ItemReward;
 import com.questhelper.rewards.QuestPointReward;
-import com.questhelper.steps.*;
+import com.questhelper.steps.ConditionalStep;
+import com.questhelper.steps.DetailedQuestStep;
+import com.questhelper.steps.NpcStep;
+import com.questhelper.steps.ObjectStep;
+import com.questhelper.steps.QuestStep;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import net.runelite.api.Skill;
 import net.runelite.api.coords.WorldPoint;
 import net.runelite.api.gameval.ItemID;
 import net.runelite.api.gameval.NpcID;
 import net.runelite.api.gameval.ObjectID;
-
-import java.util.*;
+import net.runelite.api.gameval.VarbitID;
 
 public class WaterfallQuest extends BasicQuestHelper
 {
-	//Items Required
-	ItemRequirement rope, highlightRope, glarialsPebble, glarialsUrn, glarialsAmulet, unequippedAmulet, book, key, baxKey, airRunes, waterRunes, earthRunes, airRune, waterRune,
-		earthRune;
+	// Required items
+	ItemRequirement rope;
+	ItemRequirement airRunes;
+	ItemRequirement waterRunes;
+	ItemRequirement earthRunes;
 
-	//Items Recommended
-	ItemRequirement gamesNecklace, food;
+	// Recommended items
+	ItemRequirement gamesNecklace;
+	ItemRequirement food;
 
-	Requirement inGnomeBasement, inGlarialTomb, inFalls, onHudonIsland, onDeadTreeIsland, onLedge, inUpstairsInHouse,
-		inGolrieRoom, gotPebble, inEndRoom, inEnd2;
+	// Mid-quest requirements
+	ItemRequirement highlightRope;
+	ItemRequirement glarialsPebble;
+	ItemRequirement glarialsUrn;
+	ItemRequirement glarialsAmulet;
+	ItemRequirement unequippedAmulet;
+	ItemRequirement book;
+	ItemRequirement key;
+	ItemRequirement baxKey;
+	ItemRequirement airRune;
+	ItemRequirement waterRune;
+	ItemRequirement earthRune;
 
-	QuestStep talkToAlmera, boardRaft, talkToHudon, useRopeOnRock, useRopeOnTree, getInBarrel, goUpstairsHadley, searchBookcase,
-		readBook, enterGnomeDungeon, searchGnomeCrate, enterGnomeDoor, talkToGolrie, usePebble, searchGlarialCoffin,
-		getFinalItems, boardRaftFinal, useRopeOnRockFinal, useRopeOnTreeFinal, enterFalls, searchFallsCrate, useKeyOnFallsDoor,
-		useRunes, useAmuletOnStatue, useUrnOnChalice;
+	// Zones
+	Zone gnomeBasement;
+	Zone glarialTomb;
+	Zone falls;
+	Zone endRoom;
+	Zone end2;
+	Zone hudonIsland;
+	Zone deadTreeIsland;
+	Zone ledge;
+	Zone upstairsInHouse;
+	Zone golrieRoom;
 
+	// Miscellaneous requirements
+	ZoneRequirement inGnomeBasement;
+	ZoneRequirement inGlarialTomb;
+	ZoneRequirement inFalls;
+	ZoneRequirement onHudonIsland;
+	ZoneRequirement onDeadTreeIsland;
+	ZoneRequirement onLedge;
+	ZoneRequirement inUpstairsInHouse;
+	ZoneRequirement inGolrieRoom;
+	VarbitRequirement gotPebble;
+	ZoneRequirement inEndRoom;
+	ZoneRequirement inEnd2;
+
+	// Steps
+	NpcStep talkToAlmera;
+
+	ObjectStep boardRaft;
+	NpcStep talkToHudon;
+
+	ObjectStep useRopeOnRock;
+	ObjectStep useRopeOnTree;
+	ObjectStep getInBarrel;
+	ObjectStep goUpstairsHadley;
+	ObjectStep searchBookcase;
+	DetailedQuestStep readBook;
+
+	ConditionalStep goGetPebble;
+	ObjectStep enterGnomeDungeon;
+	ObjectStep searchGnomeCrate;
+	ObjectStep enterGnomeDoor;
+	NpcStep talkToGolrie;
+
+	ConditionalStep getGlarialStuff;
+	ObjectStep usePebble;
+	ObjectStep searchGlarialCoffin;
 	ObjectStep searchGlarialChest;
 
-	ConditionalStep goGetPebble, getGlarialStuff;
+	DetailedQuestStep getFinalItems;
+	ObjectStep boardRaftFinal;
+	ObjectStep useRopeOnRockFinal;
+	ObjectStep useRopeOnTreeFinal;
+	ObjectStep enterFalls;
+	ObjectStep searchFallsCrate;
+	ObjectStep useKeyOnFallsDoor;
+	DetailedQuestStep useRunes;
+	ObjectStep useAmuletOnStatue;
+	ObjectStep useUrnOnChalice;
 
-	//Zones
-	Zone gnomeBasement, glarialTomb, falls, endRoom, end2, hudonIsland, deadTreeIsland, ledge, upstairsInHouse, golrieRoom;
 
 	@Override
-	public Map<Integer, QuestStep> loadSteps()
+	protected void setupZones()
 	{
-		initializeRequirements();
-		setupConditions();
-		setupSteps();
-		Map<Integer, QuestStep> steps = new HashMap<>();
-
-		steps.put(0, talkToAlmera);
-
-		ConditionalStep goTalkToHudon = new ConditionalStep(this, boardRaft);
-		goTalkToHudon.addStep(onHudonIsland, talkToHudon);
-
-		steps.put(1, goTalkToHudon);
-
-		ConditionalStep goReadBook = new ConditionalStep(this, goUpstairsHadley);
-		goReadBook.addStep(book, readBook);
-		goReadBook.addStep(inUpstairsInHouse, searchBookcase);
-		goReadBook.addStep(onLedge, getInBarrel);
-		goReadBook.addStep(onDeadTreeIsland, useRopeOnTree);
-		goReadBook.addStep(onHudonIsland, useRopeOnRock);
-
-		steps.put(2, goReadBook);
-
-		// TODO: Add lines to guide through maze
-		goGetPebble = new ConditionalStep(this, enterGnomeDungeon);
-		goGetPebble.addStep(inGolrieRoom, talkToGolrie);
-		goGetPebble.addStep(new Conditions(inGnomeBasement, key), enterGnomeDoor);
-		goGetPebble.addStep(inGnomeBasement, searchGnomeCrate);
-		goGetPebble.setLockingCondition(gotPebble);
-
-		getGlarialStuff = new ConditionalStep(this, usePebble);
-		getGlarialStuff.addStep(new Conditions(glarialsAmulet.alsoCheckBank(questBank), inGlarialTomb), searchGlarialCoffin);
-		getGlarialStuff.addStep(inGlarialTomb, searchGlarialChest);
-		getGlarialStuff.setLockingCondition(new Conditions(new Conditions(glarialsAmulet.alsoCheckBank(questBank), glarialsUrn.alsoCheckBank(questBank))));
-
-		ConditionalStep puttingToRest = new ConditionalStep(this, getFinalItems);
-		puttingToRest.addStep(inEnd2, useUrnOnChalice);
-		puttingToRest.addStep(inEndRoom, useRunes);
-		puttingToRest.addStep(new Conditions(inFalls, baxKey), useKeyOnFallsDoor);
-		puttingToRest.addStep(inFalls, searchFallsCrate);
-		puttingToRest.addStep(onLedge, enterFalls);
-		puttingToRest.addStep(onDeadTreeIsland, useRopeOnTreeFinal);
-		puttingToRest.addStep(onHudonIsland, useRopeOnRockFinal);
-		puttingToRest.addStep(new Conditions(glarialsUrn, glarialsAmulet, airRunes, earthRunes, waterRunes, rope), boardRaftFinal);
-
-		ConditionalStep finishingSteps = new ConditionalStep(this, goGetPebble);
-		finishingSteps.addStep(new Conditions(glarialsUrn.alsoCheckBank(questBank), glarialsAmulet.alsoCheckBank(questBank)), puttingToRest);
-		finishingSteps.addStep(gotPebble, getGlarialStuff);
-
-		steps.put(3, finishingSteps);
-		steps.put(4, finishingSteps);
-		steps.put(5, puttingToRest);
-		steps.put(6, puttingToRest);
-		steps.put(7, puttingToRest); // 7 didn't occur during testing
-		steps.put(8, puttingToRest);
-
-		return steps;
+		gnomeBasement = new Zone(new WorldPoint(2497, 9552, 0), new WorldPoint(2559, 9593, 0));
+		glarialTomb = new Zone(new WorldPoint(2524, 9801, 0), new WorldPoint(2557, 9849, 0));
+		golrieRoom = new Zone(new WorldPoint(2502, 9576, 0), new WorldPoint(2523, 9593, 0));
+		hudonIsland = new Zone(new WorldPoint(2510, 3476, 0), new WorldPoint(2515, 3482, 0));
+		deadTreeIsland = new Zone(new WorldPoint(2512, 3465, 0), new WorldPoint(2513, 3475, 0));
+		ledge = new Zone(new WorldPoint(2510, 3462, 0), new WorldPoint(2513, 3464, 0));
+		upstairsInHouse = new Zone(new WorldPoint(2516, 3424, 1), new WorldPoint(2520, 3431, 1));
+		falls = new Zone(new WorldPoint(2556, 9861, 0), new WorldPoint(2595, 9920, 0));
+		endRoom = new Zone(new WorldPoint(2561, 9902, 0), new WorldPoint(2570, 9917, 0));
+		end2 = new Zone(new WorldPoint(2599, 9890, 0), new WorldPoint(2608, 9916, 0));
 	}
 
 	@Override
@@ -158,25 +182,7 @@ public class WaterfallQuest extends BasicQuestHelper
 
 		gamesNecklace = new ItemRequirement("Games necklace", ItemCollections.GAMES_NECKLACES);
 		food = new ItemRequirement("Food", ItemCollections.GOOD_EATING_FOOD, -1);
-	}
 
-	@Override
-	protected void setupZones()
-	{
-		gnomeBasement = new Zone(new WorldPoint(2497, 9552, 0), new WorldPoint(2559, 9593, 0));
-		glarialTomb = new Zone(new WorldPoint(2524, 9801, 0), new WorldPoint(2557, 9849, 0));
-		golrieRoom = new Zone(new WorldPoint(2502, 9576, 0), new WorldPoint(2523, 9593, 0));
-		hudonIsland = new Zone(new WorldPoint(2510, 3476, 0), new WorldPoint(2515, 3482, 0));
-		deadTreeIsland = new Zone(new WorldPoint(2512, 3465, 0), new WorldPoint(2513, 3475, 0));
-		ledge = new Zone(new WorldPoint(2510, 3462, 0), new WorldPoint(2513, 3464, 0));
-		upstairsInHouse = new Zone(new WorldPoint(2516, 3424, 1), new WorldPoint(2520, 3431, 1));
-		falls = new Zone(new WorldPoint(2556, 9861, 0), new WorldPoint(2595, 9920, 0));
-		endRoom = new Zone(new WorldPoint(2561, 9902, 0), new WorldPoint(2570, 9917, 0));
-		end2 = new Zone(new WorldPoint(2599, 9890, 0), new WorldPoint(2608, 9916, 0));
-	}
-
-	public void setupConditions()
-	{
 		onDeadTreeIsland = new ZoneRequirement(deadTreeIsland);
 		onHudonIsland = new ZoneRequirement(hudonIsland);
 		onLedge = new ZoneRequirement(ledge);
@@ -187,7 +193,7 @@ public class WaterfallQuest extends BasicQuestHelper
 		inFalls = new ZoneRequirement(falls);
 		inEndRoom = new ZoneRequirement(endRoom);
 		inEnd2 = new ZoneRequirement(end2);
-		gotPebble = new VarbitRequirement(9110, 1);
+		gotPebble = new VarbitRequirement(VarbitID.WATERFALL_GOLRIE_CHAT, 1);
 	}
 
 	public void setupSteps()
@@ -207,9 +213,9 @@ public class WaterfallQuest extends BasicQuestHelper
 		searchBookcase = new ObjectStep(this, ObjectID.BOOKCASE_WATERFALL_QUEST, new WorldPoint(2520, 3427, 1), "Search the south east bookcase.");
 		readBook = new DetailedQuestStep(this, "Read the book.", book);
 
-		enterGnomeDungeon = new ObjectStep(this, ObjectID.ROVING_GOLRIE_LADDER_TO_CELLAR, new WorldPoint(2533, 3155, 0), 
+		enterGnomeDungeon = new ObjectStep(this, ObjectID.ROVING_GOLRIE_LADDER_TO_CELLAR, new WorldPoint(2533, 3155, 0),
 			"Go to the centre of the Tree Gnome Village and go down the ladder at the entrance.");
-		((ObjectStep) enterGnomeDungeon).setLinePoints(Arrays.asList(
+		enterGnomeDungeon.setLinePoints(Arrays.asList(
 			new WorldPoint(2505, 3190, 0),
 			new WorldPoint(2512, 3190, 0),
 			new WorldPoint(2512, 3188, 0),
@@ -248,7 +254,7 @@ public class WaterfallQuest extends BasicQuestHelper
 			new WorldPoint(2545, 3150, 0),
 			new WorldPoint(2545, 3155, 0),
 			new WorldPoint(2533, 3155, 0)
-			));
+		));
 		searchGnomeCrate = new ObjectStep(this, ObjectID.GOLRIE_CRATE_WATERFALL_QUEST, new WorldPoint(2548, 9565, 0), "Search the off-coloured crate in the east room.");
 		enterGnomeDoor = new ObjectStep(this, ObjectID.GOLRIE_GATE_WATERFALL_QUEST, new WorldPoint(2515, 9575, 0), "Go through the gate in the west room.", key);
 		talkToGolrie = new NpcStep(this, NpcID.GOLRIE_WATERFALL_QUEST, new WorldPoint(2514, 9580, 0), "Talk to Golrie.");
@@ -281,31 +287,91 @@ public class WaterfallQuest extends BasicQuestHelper
 	}
 
 	@Override
-	public List<ItemRequirement> getItemRequirements()
+	public Map<Integer, QuestStep> loadSteps()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(highlightRope);
-		reqs.add(airRunes);
-		reqs.add(earthRunes);
-		reqs.add(waterRunes);
-		return reqs;
+		initializeRequirements();
+		setupSteps();
+
+		Map<Integer, QuestStep> steps = new HashMap<>();
+
+		steps.put(0, talkToAlmera);
+
+		var goTalkToHudon = new ConditionalStep(this, boardRaft);
+		goTalkToHudon.addStep(onHudonIsland, talkToHudon);
+
+		steps.put(1, goTalkToHudon);
+
+		var goReadBook = new ConditionalStep(this, goUpstairsHadley);
+		goReadBook.addStep(book, readBook);
+		goReadBook.addStep(inUpstairsInHouse, searchBookcase);
+		goReadBook.addStep(onLedge, getInBarrel);
+		goReadBook.addStep(onDeadTreeIsland, useRopeOnTree);
+		goReadBook.addStep(onHudonIsland, useRopeOnRock);
+
+		steps.put(2, goReadBook);
+
+		// TODO: Add lines to guide through maze
+		goGetPebble = new ConditionalStep(this, enterGnomeDungeon);
+		goGetPebble.addStep(inGolrieRoom, talkToGolrie);
+		goGetPebble.addStep(and(inGnomeBasement, key), enterGnomeDoor);
+		goGetPebble.addStep(inGnomeBasement, searchGnomeCrate);
+		goGetPebble.setLockingCondition(gotPebble);
+
+		getGlarialStuff = new ConditionalStep(this, usePebble);
+		getGlarialStuff.addStep(and(glarialsAmulet.alsoCheckBank(questBank), inGlarialTomb), searchGlarialCoffin);
+		getGlarialStuff.addStep(inGlarialTomb, searchGlarialChest);
+		getGlarialStuff.setLockingCondition(and(glarialsAmulet.alsoCheckBank(questBank), glarialsUrn.alsoCheckBank(questBank)));
+
+		var puttingToRest = new ConditionalStep(this, getFinalItems);
+		puttingToRest.addStep(inEnd2, useUrnOnChalice);
+		puttingToRest.addStep(inEndRoom, useRunes);
+		puttingToRest.addStep(and(inFalls, baxKey), useKeyOnFallsDoor);
+		puttingToRest.addStep(inFalls, searchFallsCrate);
+		puttingToRest.addStep(onLedge, enterFalls);
+		puttingToRest.addStep(onDeadTreeIsland, useRopeOnTreeFinal);
+		puttingToRest.addStep(onHudonIsland, useRopeOnRockFinal);
+		puttingToRest.addStep(and(glarialsUrn, glarialsAmulet, airRunes, earthRunes, waterRunes, rope), boardRaftFinal);
+
+		var finishingSteps = new ConditionalStep(this, goGetPebble);
+		finishingSteps.addStep(and(glarialsUrn.alsoCheckBank(questBank), glarialsAmulet.alsoCheckBank(questBank)), puttingToRest);
+		finishingSteps.addStep(gotPebble, getGlarialStuff);
+
+		steps.put(3, finishingSteps);
+		steps.put(4, finishingSteps);
+		steps.put(5, puttingToRest);
+		steps.put(6, puttingToRest);
+		steps.put(7, puttingToRest); // 7 didn't occur during testing
+		steps.put(8, puttingToRest);
+
+		return steps;
 	}
 
 	@Override
-	public List<String> getCombatRequirements()
+	public List<ItemRequirement> getItemRequirements()
 	{
-		ArrayList<String> reqs = new ArrayList<>();
-		reqs.add("Able to survive enemies up to level 86 attacking you");
-		return reqs;
+		return List.of(
+			highlightRope,
+			airRunes,
+			earthRunes,
+			waterRunes
+		);
 	}
 
 	@Override
 	public List<ItemRequirement> getItemRecommended()
 	{
-		ArrayList<ItemRequirement> reqs = new ArrayList<>();
-		reqs.add(gamesNecklace);
-		reqs.add(food);
-		return reqs;
+		return List.of(
+			gamesNecklace,
+			food
+		);
+	}
+
+	@Override
+	public List<String> getCombatRequirements()
+	{
+		return List.of(
+			"Able to survive enemies up to level 86 attacking you"
+		);
 	}
 
 	@Override
@@ -317,38 +383,82 @@ public class WaterfallQuest extends BasicQuestHelper
 	@Override
 	public List<ExperienceReward> getExperienceRewards()
 	{
-		return Arrays.asList(
-				new ExperienceReward(Skill.STRENGTH, 13750),
-				new ExperienceReward(Skill.ATTACK, 13750));
+		return List.of(
+			new ExperienceReward(Skill.STRENGTH, 13750),
+			new ExperienceReward(Skill.ATTACK, 13750)
+		);
 	}
 
 	@Override
 	public List<ItemReward> getItemRewards()
 	{
-		return Arrays.asList(
-				new ItemReward("Diamonds", ItemID.DIAMOND, 2),
-				new ItemReward("Gold Bars", ItemID.GOLD_BAR, 2),
-				new ItemReward("Mithril Seeds", ItemID.MITHRIL_SEED, 40));
+		return List.of(
+			new ItemReward("Diamonds", ItemID.DIAMOND, 2),
+			new ItemReward("Gold Bars", ItemID.GOLD_BAR, 2),
+			new ItemReward("Mithril Seeds", ItemID.MITHRIL_SEED, 40)
+		);
 	}
 
 	@Override
 	public List<PanelDetails> getPanels()
 	{
-		List<PanelDetails> allSteps = new ArrayList<>();
-		allSteps.add(new PanelDetails("Starting off", Collections.singletonList(talkToAlmera)));
-		allSteps.add(new PanelDetails("Investigate", Arrays.asList(boardRaft, talkToHudon, useRopeOnRock, useRopeOnTree, getInBarrel, goUpstairsHadley, searchBookcase, readBook), rope));
+		var sections = new ArrayList<PanelDetails>();
 
-		PanelDetails getPebblePanel = new PanelDetails("Get Glarial's Pebble", Arrays.asList(enterGnomeDungeon, searchGnomeCrate, enterGnomeDoor, talkToGolrie));
+		sections.add(new PanelDetails("Starting off", List.of(
+			talkToAlmera
+		), List.of(
+			rope
+		)));
+
+		sections.add(new PanelDetails("Investigate", List.of(
+			boardRaft,
+			talkToHudon,
+			useRopeOnRock,
+			useRopeOnTree,
+			getInBarrel,
+			goUpstairsHadley,
+			searchBookcase,
+			readBook
+		), List.of(
+			rope
+		)));
+
+		var getPebblePanel = new PanelDetails("Get Glarial's Pebble", List.of(
+			enterGnomeDungeon,
+			searchGnomeCrate,
+			enterGnomeDoor,
+			talkToGolrie
+		));
 		getPebblePanel.setLockingStep(goGetPebble);
-		allSteps.add(getPebblePanel);
+		sections.add(getPebblePanel);
 
-		PanelDetails getGlarialStuffPanel = new PanelDetails("Loot Glarial's tomb", Arrays.asList(usePebble, searchGlarialChest, searchGlarialCoffin));
+		var getGlarialStuffPanel = new PanelDetails("Loot Glarial's tomb", List.of(
+			usePebble,
+			searchGlarialChest,
+			searchGlarialCoffin
+		));
 		getGlarialStuffPanel.setLockingStep(getGlarialStuff);
+		sections.add(getGlarialStuffPanel);
 
-		allSteps.add(getGlarialStuffPanel);
+		sections.add(new PanelDetails("Put Glarial to rest", List.of(
+			getFinalItems,
+			boardRaftFinal,
+			useRopeOnRockFinal,
+			useRopeOnTreeFinal,
+			enterFalls,
+			searchFallsCrate,
+			useKeyOnFallsDoor,
+			useRunes,
+			useUrnOnChalice
+		), List.of(
+			rope,
+			airRunes,
+			earthRunes,
+			waterRunes,
+			glarialsUrn,
+			glarialsAmulet
+		)));
 
-		PanelDetails finishOffPanel = new PanelDetails("Put Glarial to rest", Arrays.asList(getFinalItems, boardRaftFinal, useRopeOnRockFinal, useRopeOnTreeFinal, enterFalls, searchFallsCrate, useKeyOnFallsDoor, useRunes, useUrnOnChalice), rope, airRunes, earthRunes, waterRunes, glarialsUrn, glarialsAmulet);
-		allSteps.add(finishOffPanel);
-		return allSteps;
+		return sections;
 	}
 }
